--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		}
 		if (!sessionToken || notValidToken) {
 			var container = document.getElementById('container');
-			container.innerHTML = '<descope-wc project-id="P2o8wwgr3MQG4cddgAG0N3eQ5zDp" flow-id="sign-up-or-in-otp"></descope-wc>';
+			container.innerHTML = '<descope-wc project-id="P2o8wwgr3MQG4cddgAG0N3eQ5zDp" flow-id="sign-up-in-passwords"></descope-wc>';
  
 			const wcElement = document.getElementsByTagName('descope-wc')[0];
 			const onSuccess = (e) => {
